objects/icAgentConsole__incAgentConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>icAgentConsole__Agent_Sync_Available__c</fullName>
        <label>Agent Sync Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__Agent_Sync_Unavailable__c</fullName>
        <label>Agent Sync Unavailable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__Always_Create_New_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this property to always create new activity from inContact agent console app, after call is disconnected</description>
        <label>Always Create New Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__CreateTask_Refused__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set this to create tasks for refused contacts too.</description>
        <label>Create Task For Refused Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__CreateTask__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Set this property to create activities from inContact agent console app, after the contact is disconnected</inlineHelpText>
        <label>Create Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__PopupTask__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Set this property to pop an activity from inContact agent console app, after call is disconnected</inlineHelpText>
        <label>Popup Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__Presence_Master__c</fullName>
        <label>Presence Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__ProfileId__c</fullName>
        <description>Salesforce profile Id to which this configuration is applicable</description>
        <label>Profile Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__StoreScriptVariables__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set this property to store the inContact script variables in Salesforce user object custom field, when the contact is in progress.</inlineHelpText>
        <label>Store Script Variables</label>
        <type>Checkbox</type>
    </fields>
    <label>Salesforce Agent Settings</label>
    <listViews>
        <fullName>icAgentConsole__All</fullName>
        <columns>NAME</columns>
        <columns>icAgentConsole__ProfileId__c</columns>
        <columns>icAgentConsole__CreateTask__c</columns>
        <columns>icAgentConsole__PopupTask__c</columns>
        <columns>icAgentConsole__StoreScriptVariables__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Agent Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>